glFusion ChangeLog

v1.1.9
------
- Forum: Fixed sorting on New Posts (Mark)
- New option for block location - all except home page (Mark)
- Forum: Use admin lists for site member report (Mark)
- Updated CAPTCHA and reCAPTCHA layouts (Eric)
- Layout on Register screen now matches the layout on Login screen (Eric)
- Allow users to select their own passwords and implement verification email
  (Mark)
- Ratings were not moved to new story when story id changed (Mark)
- Media Gallery: Fixed issue where quota was not always set properly when
  member album enrollment was enabled (Mark)
- Fixed default username and password being translated accidentally (Eric)
- Improved bbcode cheat sheet based on nouveau theme (Eric)
- Updated public_html/docs/config.html with new search info (Eric)
- Added ability to create remote users (when enabled) (Mark)
- FileMgmt: Add new configuration option 'Silent Edit Default' (Mark)
- Move services dropdown after password on login forms (Mark)
- Staticpage / Media Gallery: Option to specify centerblock for all topics
  except the homepage (Mark)
- Implement skip token re-init on admin auth (Mark)
- Calendar: Enforce login required on event view (event.php) (Mark)
- Forum: Translate <>& in posts when created with WYSIWYG editor (Mark)
- Topic block - do not mark inactive if $topic is blank (Mark)
- New permission - stats.view - controls access to Stats page (Mark)
- Media Gallery: Added linksrc: parameter to media auto tag to specify
  which image (tn/disp/orig) should be used in the direct link (Mark)
- Calendar Plugin: Admin interface improvements & code scrub (Mark H.)
    - New feature: JS date picker for start/end dates
    - New feature: Ability to enable/disable events
    - New feature: Auto-set event end month/day/year/hour/minute to event start
    - New feature: Client-side validation for required fields
    - New feature: Suppress input fields for hr/min/ampm if all day event